--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -1,9 +1,11 @@
 .title {
-    background-color: rgb(31, 31, 112);
-    margin: 0;
-    padding: 1%;
-    width: 100%;
-    height: 20%;
-    text-align: center;
-    color: whitesmoke;
+    margin: auto;
+    width: 450px;
+    font-size: 3rem;
+    text-align: center;    
+    color: rgb(7, 7, 7);
+    margin-top: 200px;
+    background-color: rgba(215, 224, 250, 0.596);
+    border-radius: 5px;
 }
+
