--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -1,7 +1,7 @@
 .title {
     margin: auto;
     width: 450px;
-    font-size: 3rem;
+    font-size: 3em;
     text-align: center;    
     color: rgb(7, 7, 7);
     margin-top: 200px;
